--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
       </head>
 
     <body style="opacity: 0;">
-        <script type="text/javascript">$("html").niceScroll();
+        <script type="text/javascript">
+          $(function() {  
+              $("body").niceScroll();
+          });
       </script>
         <!--================Header Menu Area =================-->
         <header class="header_area">
