--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link rel="stylesheet" href="css/responsive.css">
         <style type="text/css">
             body{
-            overflow:     hidden;
+            overflow-x:     hidden;
             user-select: none;
             -webkit-touch-callout: none;
   -webkit-user-select: none;
@@ -47,23 +47,13 @@
         };
       </script>
 	       
-         <script type="text/javascript" src="js/jquery.nicescroll.min.js">
 	       </script>
 	       <script src="js/apexcharts.min.js"></script>
         <script type="text/javascript" src="js/data.js"></script>
-
+        <script src="jQuery.scrollSpeed.js"></script>
       </head>
 
     <body style="opacity: 0;">
-        <script type="text/javascript">
-          $(function() {  
-              $("body").niceScroll({
-                cursorborder: "0px solid #fff"
-              });
-          });
-
-          
-      </script>
         <!--================Header Menu Area =================-->
         <header class="header_area">
             <div class="main_menu">
