--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
           $( "body" ).niceScroll({
             cursorborder: "0px solid #fff",
             preventmultitouchscrolling: false, 
+            hwacceleration: false, 
           });
 
           $( "body" ).animate({
