--- a/index.html
+++ b/index.html
@@ -134,6 +134,21 @@
             </div>
         </section>
 
+        <div class="row text-center p-5">
+          <div class="col-12 rounded-pill border border-success m-auto">
+            <div class="p-2">
+            <div class="row">
+              <div class="col-12"><h2>Total Asset in Management</h2></div>
+            </div>
+            <div class="row">
+              <div class="col-12">
+                <h4 id="totalasset">0.00</h4>
+              </div>
+            </div>
+            </div>
+          </div>
+        </div>
+
         <!--================Mission Area =================-->
         <section class="mission_area">
 			<div class="row m0">
