--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <div class="col-12 rounded-pill border border-success m-auto">
             <div class="p-2">
             <div class="row">
-              <div class="col-12"><h2>Total Asset in Management</h2></div>
+              <div class="col-12"><h2>Assets Under Management</h2></div>
             </div>
             <div class="row">
               <div class="col-12">
