--- a/index.html
+++ b/index.html
@@ -134,9 +134,8 @@
             </div>
         </section>
 
-        <div class="row text-center p-5">
-          <div class="col-12 rounded-pill border border-success m-auto">
-            <div class="p-2">
+        <div class="row text-center p-5 m-0">
+          <div class="col-12 rounded-pill border border-success m-auto p-2">
             <div class="row">
               <div class="col-12"><h2>Assets Under Management</h2></div>
             </div>
@@ -144,7 +143,6 @@
               <div class="col-12">
                 <h4 id="totalasset">0.00</h4>
               </div>
-            </div>
             </div>
           </div>
         </div>
