--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
                     <div class="col-lg-4 col-md-6 col-sm-6">
                         <div class="single-footer-widget">
                             <h6 class="footer_title">Contact</h6>
-                            <p>Request detailed trading result.</p>		
+                            <p>Leave your email here.</p>		
                             <div id="mc_embed_signup">
                                 <form target="_blank" method="get" class="subscribe_form relative">
                                     <div class="input-group d-flex flex-row">
