--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             background-color: #a7cb00;
         }
         </style>
+        
       <script src="js/jquery-3.2.1.min.js"></script>
 	       <script src="js/apexcharts.min.js"></script>
         <script type="text/javascript" src="js/data.js"></script>
@@ -806,7 +807,7 @@
 			</div>
         </footer>
 		<!--================ End footer Area  =================-->
-        
+        <script type="text/javascript" src="js/bootstrap.min.js"></script>
         <script src="js/port.js"></script>
         <script type="text/javascript" src="js/chart.js"></script>
         <script src="vendors/swiper/js/swiper.min.js"></script>
