--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                             <tbody>
                                 <tr>
                                   <th scope="row">$R1</th>
-                                  <td>No Risk, Fixed 0.18%</td>
+                                  <td>No Risk, Fixed 0.15%</td>
                                   <td>
                                         <script type="text/javascript">
                                             document.write(fixed[fixed.length-1]);
@@ -443,8 +443,8 @@
         	<div class="row m0">
         		<div class="col-lg-6 p0">
         			<div class="mission_text">
-						<h4>No Risk, Fixed 0.18%</h4>
-						<p>No risk investment with 0.2% fixed return/week.</p>
+						<h4>No Risk, Fixed 0.15%</h4>
+						<p>No risk investment with 0.15% fixed return/week.</p>
                         <div class="row mt-3">
                             <div class="col col-6">
                                 <h5>Risk</h5>
@@ -564,8 +564,8 @@
 
       <div class="col-lg-4 col-md-6 p-2">
         <div class="card shadow-sm">
-          <div class="card-header text-light" style="background-color: #26A0FC;">
-            <h4 class="my-0 font-weight-normal">No Risk, Fixed 0.18%</h4>
+          <div class="card-header text-light" style="background-color: #5C6BC0;">
+            <h4 class="my-0 font-weight-normal">No Risk, Fixed 0.15%</h4>
           </div>
           <div class="card-body">
             <h1 class="card-title pricing-card-title"><script type="text/javascript">
@@ -579,14 +579,14 @@
               <li>Minimum 1,000 shares</li>
               <li>Maximum 10,000 shares</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-light text-light" style="background-color: #26A0FC;">Get Started</button>
+            <button type="button" class="btn btn-lg btn-block btn-light text-light" style="background-color: #5C6BC0;">Get Started</button>
           </div>
         </div>
       </div>
 
       <div class="col-lg-4 col-md-6 p-2">
         <div class="card shadow-sm">
-          <div class="card-header text-light" style="background-color: #5C6BC0">
+          <div class="card-header text-light" style="background-color: #29B6F6">
             <h4 class="my-0 font-weight-normal">No Risk</h4>
           </div>
           <div class="card-body">
@@ -601,14 +601,14 @@
               <li>Minimum 1,000 shares</li>
               <li>Maximum 10,000 shares</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-light text-light" style="background-color: #5C6BC0;">Get Started</button>
+            <button type="button" class="btn btn-lg btn-block btn-light text-light" style="background-color: #29B6F6;">Get Started</button>
           </div>
         </div>
       </div>
 
       <div class="col-lg-4 col-md-6 p-2">
         <div class="card shadow-sm">
-          <div class="card-header text-light" style="background-color: #29B6F6">
+          <div class="card-header text-light" style="background-color: #67BB6A">
             <h4 class="my-0 font-weight-normal">Low Risk</h4>
           </div>
           <div class="card-body">
@@ -623,14 +623,14 @@
               <li>Minimum 1,000 shares</li>
               <li>Maximum 10,000 shares</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-light text-light" style="background-color: #29B6F6;">Get Started</button>
+            <button type="button" class="btn btn-lg btn-block btn-light text-light" style="background-color: #67BB6A;">Get Started</button>
           </div>
         </div>
       </div>
 
       <div class="col-lg-4 col-md-6 p-2 m-auto">
         <div class="card shadow-sm">
-          <div class="card-header text-light" style="background-color: #67BB6A">
+          <div class="card-header text-light" style="background-color: #f7c80a">
             <h4 class="my-0 font-weight-normal">Medium Risk</h4>
           </div>
           <div class="card-body">
@@ -645,7 +645,7 @@
               <li>Minimum 1,000 shares</li>
               <li>Maximum 10,000 shares</li>
             </ul>
-            <button type="button" class="btn btn-lg btn-block btn-light text-light" style="background-color: #67BB6A;">Get Started</button>
+            <button type="button" class="btn btn-lg btn-block btn-light text-light" style="background-color: #f7c80a;">Get Started</button>
           </div>
         </div>
       </div>
