--- a/contracts/001/index.html
+++ b/contracts/001/index.html
@@ -98,8 +98,8 @@
 </div>
 
 
-<div class="row">
-	<div id="chart1" class="col-12"></div>
+<div class="row" style="width: 100%">
+	<div id="chart1" style="width: 100%"></div>
 </div>
 
 <div class="row">
