--- a/contracts/001/index.html
+++ b/contracts/001/index.html
@@ -13,7 +13,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>001</title>
+	<title>001 - October, 12 2019</title>
 	<meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
@@ -108,7 +108,6 @@
 		  <thead class="thead-dark">
 		    <tr>
 		      <th scope="col">#</th>
-		      <th scope="col">Date</th>
 		      <th scope="col">Risk</th>
 		      
 		      <th scope="col">Entry</th>
@@ -165,8 +164,6 @@
 
 		  			document.write("<tr>");
 		  			document.write("<th scope='row'>"+(i+1)+"</th>");
-
-		  			document.write("<td>"+obj[shares[i]]["Date"]+"</td>");
 		  			document.write("<td>"+shares[i]+"</td>");
 		  			document.write("<td>"+entry+"</td>");
 		  			document.write("<td>"+current+"</td>");
@@ -201,7 +198,7 @@
 		  	</script>
 
 		    <tr>
-		    	<th scope="row" colspan="5" style="font-size: 20px">Total: </th>
+		    	<th scope="row" colspan="4" style="font-size: 20px">Total: </th>
 		    	<script>
 		    		var gain = ((_current/_entry*100-100)).toFixed(2);
 		    		var gaincommission = (((_current+_bonus)/_entry*100-100)).toFixed(2);
