--- a/index.html
+++ b/index.html
@@ -447,11 +447,14 @@
 
         <!--================Success Area =================-->
         <section class="success_area">
-        	<div class="row m0">
-        		<div class="col-lg-6 p0">
-        			<div class="mission_text">
-						<h4>No Risk, Fixed 0.15%</h4>
-						<p>No risk investment with 0.15% fixed return/week.</p>
+
+
+
+          <div class="row m0">
+                <div class="col-lg-6 p0">
+                    <div class="mission_text col-12">
+                        <h4>No Risk, Fixed 0.15%</h4>
+                        <p>No risk investment with 0.15% fixed return/week.</p>
                         <div class="row mt-3">
                             <div class="col col-6">
                                 <h5>Risk</h5>
@@ -462,15 +465,16 @@
                                 <div id="round1"></div>
                             </div>
                         </div>
-					</div>
-        		</div>
-        		<div class="col-lg-6">
-        			<div id="chart1" class="m-auto"></div>
-        		</div>
-        	</div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div id="chart1" class="m-auto"></div>
+                </div>
+            </div>
+
             <div class="row m0">
                 <div class="col-lg-6 p0">
-                    <div class="mission_text">
+                    <div class="mission_text col-12">
                         <h4>No Risk</h4>
                         <p>No risk investment with dynamic return. The maximum loss is limited to 0.</p>
                         <div class="row mt-3">
@@ -489,9 +493,11 @@
                     <div id="chart2" class="m-auto"></div>
                 </div>
             </div>
+
+
             <div class="row m0">
                 <div class="col-lg-6 p0">
-                    <div class="mission_text">
+                    <div class="mission_text col-12">
                         <h4>Low Risk</h4>
                         <p>Low risk investment with dynamic return.</p>
                         <div class="row mt-3">
@@ -512,7 +518,7 @@
             </div>
             <div class="row m0">
                 <div class="col-lg-6 p0">
-                    <div class="mission_text">
+                    <div class="mission_text col-12">
                         <h4>Medium Risk</h4>
                         <p>Medium risk investment with dynamic return.</p>
                         <div class="row mt-3">
@@ -533,7 +539,7 @@
             </div>
             <div class="row m0">
                 <div class="col-lg-6 p0">
-                    <div class="mission_text">
+                    <div class="mission_text col-12">
                         <h4>High Risk</h4>
                         <p>High risk investment with dynamic return.</p>
                         <div class="row mt-3">
@@ -782,6 +788,12 @@
                     <span style="color: #a7cb00; font-size: 20px;">Testing 2</span>
                     <span href="#" class="float-right">2020 Q1</span>
                     <p style="font-size: 16px;">We test our performance and risk management in the market</p>
+                  </li>
+
+                  <li>
+                    <span style="color: #a7cb00; font-size: 20px;">Stock Split 1 for 2</span>
+                    <span href="#" class="float-right">2020.01.15</span>
+                    <p style="font-size: 16px;">Split to half price</p>
                   </li>
 
                   <li>
