--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
    width: 100%;
 }
 @media only screen and (max-device-width: 1366px) {
-  .parallax {
+  .parallax, .parallax1 {
     background-attachment: scroll;
   }
 }
