--- a/index.html
+++ b/index.html
@@ -925,7 +925,7 @@
         <div class="pb-5">
           <div class="container ">
             <div class="row pb-5">
-              <div class="col-md-6 offset-md-3">
+              <div class="col-md-6 offset-md-3 mr-3">
                 <ul class="timeline">
 
                   <li>
