--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           
         };
         </script>
-        <script type="text/javascript" src="js/chart.min.js"></script>
+        <script type="text/javascript" src="js/Chart.min.js"></script>
         <script type="text/javascript" src="js/chartjs-plugin-datalabels.min.js"></script>
       </head>
 
