--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
   transform: translateY(-50%);
   margin: auto;
 }
+.area{
+  height: 300px;
+}
 .def{
   color: #a7cb00;
 }
@@ -128,7 +131,6 @@
         </style>
         
       <script src="js/jquery-3.2.1.min.js"></script>
-	       <script src="js/apexcharts.min.js"></script>
         <script type="text/javascript" src="js/data.js"></script>
         <script type="text/javascript">
           window.onload = function() {
@@ -230,12 +232,14 @@
         
 
         <!--================Mission Area =================-->
-        <section class="mission_area">
+        <section class="mission_area pt-5">
 			<div class="row m0">
 				<div class="col-lg-6 p0">
 					<div class="left_img">
                         <div class="col-lg-12 m-auto">
-                                <div id="chart"></div>
+                                <div>
+                                  <canvas id="compare" style="height: 450px"></canvas>
+                                </div>
                         </div>               
                     </div>
 				</div>
@@ -553,7 +557,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div id="chart1" class="m-auto"></div>
+                    <div>
+                      <canvas id="myarea" class="area"></canvas>
+                    </div>
                 </div>
             </div>
 
@@ -575,7 +581,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div id="chart2" class="m-auto"></div>
+                    <div>
+                      <canvas id="myarea1" class="area"></canvas>
+                    </div>
                 </div>
             </div>
 
@@ -598,7 +606,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div id="chart3" class="m-auto"></div>
+                     <div>
+                      <canvas id="myarea2" class="area"></canvas>
+                    </div>
                 </div>
             </div>
             <div class="row m0">
@@ -619,7 +629,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div id="chart4" class="m-auto"></div>
+                     <div>
+                      <canvas id="myarea3" class="area"></canvas>
+                    </div>
                 </div>
             </div>
             <div class="row m0">
@@ -640,7 +652,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div id="chart5" class="m-auto"></div>
+                     <div>
+                      <canvas id="myarea4" class="area"></canvas>
+                    </div>
                 </div>
             </div>
 
