--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                     <div class="mission_text col-12">
                         <h4>No Risk, Fixed 0.15%</h4>
                         <p>No risk investment with 0.15% fixed return/week.</p>
-                        <div class="row mt-3">
+                        <div class="row mt-3 mb-4">
                             <div class="col col-6">
                                 <h5>Risk</h5>
                                 <img class="radial" src="img/chart/zero.jpg">
@@ -568,7 +568,7 @@
                     <div class="mission_text col-12">
                         <h4>No Risk</h4>
                         <p>No risk investment with dynamic return. The maximum loss is limited to 0.</p>
-                        <div class="row mt-3">
+                        <div class="row mt-3 mb-4">
                             <div class="col col-6">
                                 <h5>Risk</h5>
                                 <img class="radial" src="img/chart/zero.jpg">
@@ -593,7 +593,7 @@
                     <div class="mission_text col-12">
                         <h4>Low Risk</h4>
                         <p>Low risk investment with dynamic return.</p>
-                        <div class="row mt-3">
+                        <div class="row mt-3 mb-4">
                             <div class="col col-6">
                                 <h5>Risk</h5>
                                 <img class="radial" src="img/chart/ten.jpg">
@@ -616,7 +616,7 @@
                     <div class="mission_text col-12">
                         <h4>Medium Risk</h4>
                         <p>Medium risk investment with dynamic return.</p>
-                        <div class="row mt-3">
+                        <div class="row mt-3 mb-4">
                             <div class="col col-6">
                                 <h5>Risk</h5>
                                 <img class="radial" src="img/chart/fifty.jpg">
@@ -639,7 +639,7 @@
                     <div class="mission_text col-12">
                         <h4>High Risk</h4>
                         <p>High risk investment with dynamic return.</p>
-                        <div class="row mt-3">
+                        <div class="row mt-3 mb-4">
                             <div class="col col-6">
                                 <h5>Risk</h5>
                                 <img class="radial" src="img/chart/ninety.jpg">
