--- a/test.html
+++ b/test.html
@@ -2,21 +2,22 @@
 <html>
 <head>
 	<title></title>
-	<script type="text/javascript" src="js/chart.min.js"></script>
-	<script type="text/javascript" src="js/data.js"></script>
-	<script type="text/javascript" src="js/chartjs-plugin-datalabels.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/spinkit.min.css">
+	<style type="text/css">
+		html, body{
+			margin: 0;
+			width: 100%;
+			height: 100%
+		}
+		
+	</style>
+
 </head>
 <body>
 
-	<div style="width: 1000px">
-		<canvas id="mycanvas"></canvas>
-<script>
-
-
-
-
-</script>
-
+<div>
+	
 </div>
+
 </body>
 </html>
