--- a/index.html
+++ b/index.html
@@ -3,9 +3,34 @@
     <head>
         <!-- Required meta tags -->
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, maximum-scale=1.0, user-scalable=no">
         <title>Financial Fund</title>
         <!-- Bootstrap CSS -->
+        <link rel="stylesheet" type="text/css" href="css/spinkit.min.css">
+        <style type="text/css">
+          .s{
+              width: 100px; height: 100px; display: inline-block;margin: 0;
+              position: absolute;
+              top: 50%;
+              left: 50%;
+              transform: translate(-50%, -50%);
+              text-align: center;
+              background-color: white;
+            }
+            .sk-fold{
+              width: 100%;
+              height: 100%;
+            }
+            .loading{
+              background-color: white;
+              width: 100%;
+              height: 100%;
+              position: fixed;
+              z-index: 99999;
+            }
+        </style>
+        
+
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="vendors/linericon/style.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">
