--- a/test.html
+++ b/test.html
@@ -2,21 +2,102 @@
 <html>
 <head>
 	<title></title>
-	<link rel="stylesheet" type="text/css" href="css/spinkit.min.css">
+	<script type="text/javascript" src="js/Chart.min.js"></script>
+	<script type="text/javascript" src="js/chartjs-plugin-datalabels.min.js"></script>
 	<style type="text/css">
-		html, body{
-			margin: 0;
-			width: 100%;
-			height: 100%
-		}
-		
-	</style>
 
+	</style>
 </head>
 <body>
 
 <div>
-	
+	<canvas id="mycanvas"></canvas>
+	<script type="text/javascript">
+			var data=[11.92, 14.96, 11.52, 7.25];
+
+			var avg = [];
+
+			for(var i=0; i<data.length; i++){
+				if(i==0) {avg.push(0);}
+				else{
+					var sum = 0;
+					for (var j = 0; j < i; j++) {
+						sum+=data[j];
+					}
+					sum/=(i);
+					avg.push(sum.toFixed(2));
+				}
+			}
+
+			Chart.helpers.merge(Chart.defaults.global.plugins.datalabels, {
+    color: '#000',
+    align: 'top',
+    anchor: 'end',
+    font:{
+    	size: 16
+    }
+});
+
+		new Chart(document.getElementById('mycanvas'), {
+    type: 'bar',
+    responsive: false,
+    data: {
+        labels: ['October',"November", "December", "January"],
+        datasets: [
+        		{
+            label: "Average Return",
+            data: avg,
+            backgroundColor: "#8e5ea2",
+            hoverBackgroundColor: "#8e5ea2",
+            barPercentage: 0.95
+        		},
+        		{
+            label: "Actual Return",
+            data: data,
+            backgroundColor: "#3e95cd",
+            hoverBackgroundColor: "#3e95cd",
+            barPercentage: 0.95
+        }
+        ]
+    },
+    options: {
+        scales: {
+            xAxes: [{
+                ticks: {
+                    beginAtZero: true
+                },
+
+            }],
+            yAxes: [{
+                ticks: {
+                    beginAtZero: true
+                },
+            }]
+        },
+        tooltips: {
+            mode: "nearest",
+          },
+
+          
+        title: {
+                    display: true,
+                    fontSize: 48,
+                    text: 'Monthly Average Return',
+                    fontFamily: "'Helvetica', 'Arial', sans-serif",
+                    fontStyle: "normal",
+                    padding: 30
+                },
+        plugins: {
+            datalabels: {
+                formatter: function(value, context) {
+                    return value+"%";
+                }
+            }
+        }
+
+    }
+});
+	</script>
 </div>
 
 </body>
