--- a/contracts/001/index.html
+++ b/contracts/001/index.html
@@ -15,7 +15,6 @@
 <head>
 	<title>001 - October, 12 2019</title>
 	<meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="../../css/bootstrap.css">
@@ -34,23 +33,15 @@
       -ms-user-select: none;
        -o-user-select: none;
           user-select: none;
-          opacity: 0;
         }
 
         </style>
 
         <script src="../../js/jquery-3.2.1.min.js"></script>
 	    <script src="../../js/apexcharts.min.js"></script>
+	    <script src="../../js/Chart.min.js"></script>
         <script type="text/javascript" src="../../js/data.js"></script>
         <script type="text/javascript">
-          window.onload = function() {
-          $( "body" ).animate({
-            opacity: 1
-          }, 1000, function() {
-            // Animation complete.
-          });
-          
-        };
 
         function formatNumber(num) {
 		  return num.toString().replace(/(\d)(?=(\d{3})+(?!\d))/g, '$1,')
@@ -59,7 +50,7 @@
 </head>
 <body>
 
-<div class="container" id="container">
+<div class="container-fluid" id="container">
 <div class="row">
 	<div class="col-lg-12">
 		<h1 class="pt-4 pl-4 text-dark">Financial Fund</h1>
@@ -97,7 +88,9 @@
 
 
 <div class="row" style="width: 100%">
-	<div id="chart1" style="width: 100%"></div>
+	<div class="col-10">
+		<div id="chart1" style="width: 100%"></div>
+	</div>
 </div>
 
 <div class="row">
@@ -238,9 +231,11 @@
 	</div>
 </div>
 
-<div class="row">
-	<div id="chart" class="col-12"></div>
-</div>
+<!-- <div class="row">
+	<div class="col-10 m-auto">
+		<canvas id="myarea" style="height: 500px"></canvas>
+	</div>
+</div> -->
 
 
 <script type="text/javascript">
@@ -293,61 +288,6 @@ function printDiv() {
 		data = {};
 		equity = [];
 	}
-	
-	// data["name"] = "Total";
-	// data["data"] = sum;
-	// series.push(data);
-	
-	
-
-	var options = {
-	title: {
-		text: "Detail",
-		margin: 0,
-		align: 'center',
-		style: {
-	      fontSize:  '48px'
-	    }
-	},
-    chart: {
-        height: 500,
-        type: 'area',
-        toolbar:{
-            show: false,
-        },
-        animations:{
-            enabled: true,
-        }
-    },
-    dataLabels: {
-        enabled: false
-    },
-    series: series
-    ,
-    xaxis: {
-        type: 'text',               
-    },
-    yaxis: {
-	  labels: {
-	    formatter: function (value) {
-	      return formatNumber(value);
-	    }
-	  },
-	},
-    tooltip: {
-    	inverseOrder: true,
-        enabled: true,
-    },
-    legend:{
-    	position: 'bottom',
-    },
-    stroke:{
-        curve: 'smooth',
-    	width: 1,
-    },
-   
-}
-var compare = new ApexCharts(document.querySelector("#chart"),options);
 
 series = [];
 data["name"] = "Total";
@@ -356,7 +296,7 @@ series.push(data);
 
 var options = {
     chart: {
-        height: 350,
+        height: 500,
         type: 'area',
         toolbar:{
             show: false,
@@ -399,8 +339,33 @@ var options = {
 }
 
 var all = new ApexCharts(document.querySelector("#chart1"),options);
-//compare.render();
 all.render();
+
+// new Chart(document.getElementById("myarea"),{"type":"line",
+// 	"data":{
+//     "labels":series[0]["data"],
+//     "datasets":[
+//     {"label":["Return"],"data":series[0]["data"],
+//     "fill":true,
+//     "borderColor":"#5C6BC0",
+//     backgroundColor: 'rgba(92,107,192,0.2)',
+//     }]},
+//     "options":{
+//         maintainAspectRatio: false,
+//         tooltips: {
+//             mode: "nearest",
+//             intersect: false,
+//           },
+//           legend:{
+//             display: false,
+//           },
+//         plugins: {
+//           datalabels: {
+//              display: false
+//           }
+//         },
+
+//     }});
 
 </script>
 </div>
