--- a/contracts/001/index.html
+++ b/contracts/001/index.html
@@ -88,8 +88,8 @@
 
 
 <div class="row" style="width: 100%">
-	<div class="col-10">
-		<div id="chart1" style="width: 100%"></div>
+	<div class="col-12">
+		<div id="chart1"></div>
 	</div>
 </div>
 
