--- a/index.html
+++ b/index.html
@@ -913,9 +913,9 @@
                   </li>
 
                   <li>
-                    <span style="color: #a7cb00; font-size: 20px;">Stock Split 1 for 2</span>
+                    <span style="color: #a7cb00; font-size: 20px;">Reverse 1 for 2 split</span>
                     <span href="#" class="float-right">2020.01.15</span>
-                    <p style="font-size: 16px;">Split to half price</p>
+                    <p style="font-size: 16px;">Price Doubled</p>
                   </li>
 
                   <li>
