--- a/contracts/001/index.html
+++ b/contracts/001/index.html
@@ -322,6 +322,7 @@ var options = {
 	      return formatNumber(value);
 	    }
 	  },
+	  forceNiceScale: true,
 	  min: Math.min(...series[0]["data"])
 	},
     tooltip: {
