--- a/ECONOMY.html
+++ b/ECONOMY.html
@@ -29,6 +29,7 @@
     responsive: false,
     data: {
         labels: ["Philly Fed Manufacturing Index",
+        "Non-Farm Employment Change",
         'Empire State Manufacturing Index',
         'ISM Manufacturing PMI',
         
@@ -42,12 +43,13 @@
         'Industrial Production m/m',
         'Trade Balance',
         "Current Account",
-        "Non-Farm Employment Change"],
+        ],
         datasets: [
         		{
                     label: "USD",
                     data: [
                     359.45, 
+                    38.03,
                     29.72,
                     4.94, 
                     
@@ -62,7 +64,7 @@
                      -0.3,
                      -1.45,
                      -1.64,
-                     -10.49],
+                     ],
                     backgroundColor: "#8e5ea2",
                     hoverBackgroundColor: "#8e5ea2",
                     barPercentage: 0.95
@@ -92,7 +94,7 @@
         title: {
                     display: true,
                     fontSize: 48,
-                    text: 'Data',
+                    text: 'Economic Surprise',
                     fontFamily: "'Helvetica', 'Arial', sans-serif",
                     fontStyle: "normal",
                     padding: 30
