--- a/index.html
+++ b/index.html
@@ -961,9 +961,9 @@
                 <div class="row">
                     <div class="col-lg-4  col-md-6 col-sm-6">
                         <div class="single-footer-widget">
-                            <h6 class="footer_title">About Financial Fund</h6>
+                            <h6 class="footer_title">Disclaimer</h6>
                             <p>
-                                We have been trading currencies market for more than 2,500 hours. We manage our risk professionally.
+                                Futures, ETF and FX trading involves substantial risk and you can lose money. Please think carefully before investing. Do not invest or use money you can’t afford to lose. The trading ideas presented are for information purposes only and in no way constitute an investment approach.
                             </p>
                         </div>
                     </div>
