--- a/GROWTH.html
+++ b/GROWTH.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div class="row">
-<div class="col-6">
+<div class="col-lg-6 col-md-12">
 	<canvas id="mycanvas"></canvas>
 	<script type="text/javascript">
 			var data=[11.92, 14.96, 11.52, 8.11];
@@ -100,7 +100,7 @@
 	</script>
 </div>
 
-<div class="col-6">
+<div class="col-lg-6 col-md-12">
     <canvas id="mycanvas1"></canvas>
     <script type="text/javascript">
 
