--- a/GROWTH.html
+++ b/GROWTH.html
@@ -104,8 +104,8 @@
     <canvas id="mycanvas1"></canvas>
     <script type="text/javascript">
 
-        var date = ["02/19","02/20", "02/21"];
-        var data = [23.58,23.79, 21.88];
+        var date = ["02/19","02/20", "02/21", "02/24", "02/25"];
+        var data = [23.58,23.79, 21.88, 20.24, 18.28];
 
         new Chart(document.getElementById('mycanvas1'), {
     type: 'line',
