--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@
                         <div class="single-footer-widget">
                             <h6 class="footer_title">Disclaimer</h6>
                             <p>
-                                Futures, ETF and FX trading involves substantial risk and you can lose money. Please think carefully before investing. Do not invest or use money you can’t afford to lose. The trading ideas presented are for information purposes only and in no way constitute an investment approach.
+                                Futures, ETF and FX trading involves substantial risk and you can lose money. Please think carefully before investing. Do not invest or use money you can’t afford to lose.
                             </p>
                         </div>
                     </div>
